# Arcade

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh
.github/workflows/: actions.yml  actionsDev.yml
common/: Color.hpp  Event.hpp  IDisplay.hpp  IGame.hpp  Object.hpp
core/: CLibEncapsulation.cpp  CLibEncapsulation.hpp  Core.cpp  Core.hpp  main.cpp
librairies/assets/nibbler/: map0.txt  map1.txt  map2.txt
librairies/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
librairies/nibbler/: CMakeLists.txt  nibbler.cpp  nibbler.hpp
librairies/sdl2/: CMakeLists.txt  sdl2.cpp  sdl2.hpp
librairies/sfml/: CMakeLists.txt  sfml.cpp  sfml.hpp
librairies/snake/: CMakeLists.txt  snake.cpp  snake.hpp
librairies/template/: CMakeLists.txt
